--- a/Decision Tree in Python .ipynb
+++ b/Decision Tree in Python .ipynb
@@ -1,12 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e77319e5",
+   "metadata": {},
+   "source": [
+    "### Decision Tree Classfication"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68599ec9",
+   "metadata": {},
+   "source": [
+    "#### Importing the libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a63ccd96",
+   "execution_count": 2,
+   "id": "92dea671",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fad77fb",
+   "metadata": {},
+   "source": [
+    "#### Importing the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53f5e797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.read_csv('Social_Network_Ads.csv') "
+   ]
   }
  ],
  "metadata": {
